<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AboutAppActivity"
    android:background="@color/colorLightGreyShade2">

    <androidx.cardview.widget.CardView
        android:id="@+id/bannerCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardCornerRadius="6dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgBanner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/banner_jayu"
                android:contentDescription="@string/imgbanner" />

            <TextView
                android:id="@+id/txtDevelopedBy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/developed_by"
                android:textSize="@dimen/textSize"
                android:layout_marginStart="5dp"
                android:textColor="@color/colorPrimaryText"/>

            <TextView
                android:id="@+id/txtJayu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jayu"
                android:textSize="@dimen/textSize"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:textColor="@color/colorPrimaryText"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/aboutCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bannerCard"
        android:layout_above="@+id/contactMeCard"
        android:layout_margin="10dp"
        app:cardCornerRadius="6dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/aboutAppLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about_this_app"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="@dimen/bigTextSize"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/aboutAppDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="@dimen/smallTextSize"/>

                <TextView
                    android:id="@+id/aboutMeLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about_me"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="@dimen/bigTextSize"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/aboutMeDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="@dimen/smallTextSize"/>

            </LinearLayout>

        </ScrollView>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/contactMeCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp"
        app:cardCornerRadius="6dp">

        <LinearLayout
            android:id="@+id/contactMeLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentBottom="true">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lets_connect"
                android:textSize="@dimen/bigTextSize"
                android:textColor="@color/colorPrimaryText"
                android:gravity="center_horizontal"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="6">

                <ImageView
                    android:id="@+id/imgGitHub"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/github"
                    android:layout_weight="1"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="@string/imggithub" />

                <ImageView
                    android:id="@+id/imgLinkedIn"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/linkedin"
                    android:layout_weight="1"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="@string/imglinkedin" />

                <ImageView
                    android:id="@+id/imgGmail"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/gmail"
                    android:layout_weight="1"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="@string/imggmail" />

                <ImageView
                    android:id="@+id/imgTwitter"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/twitter"
                    android:layout_weight="1"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="@string/imgtwitter" />

                <ImageView
                    android:id="@+id/imgInstagram"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/instagram"
                    android:layout_weight="1"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="@string/imgInstagram" />

                <ImageView
                    android:id="@+id/imgPlayStore"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/playstore"
                    android:layout_weight="1"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_gravity="center_vertical"
                    app:tint="@color/colorPrimary"
                    android:contentDescription="@string/imgplaystore" />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>