<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tnl_CardNumber"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/card_number"
            app:errorTextAppearance="@style/error_appearance"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true"
            tools:ignore="HardcodedText">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtCardNumber"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="start|top"
                android:inputType="number"
                android:longClickable="false"
                android:maxLength="16"
                app:errorTextAppearance="@style/error_appearance"
                android:textAlignment="textStart" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/txtCardError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorRed"
            android:visibility="gone"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_marginTop="20sp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_marginEnd="10dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tnl_Expiry"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/mm_yy"
                app:hintAnimationEnabled="true"
                app:hintEnabled="true"
                tools:ignore="HardcodedText">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtExpiry"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="start|top"
                    android:inputType="textVisiblePassword|number"
                    android:longClickable="false"
                    android:maxLength="05"
                    android:textAlignment="textStart" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/txtExpiryError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorRed"
                android:visibility="gone"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_marginStart="10dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tnl_SecurityCode"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/security_code"
                app:hintAnimationEnabled="true"
                app:hintEnabled="true"
                tools:ignore="HardcodedText">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtSecurityCode"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="start|top"
                    android:inputType="number"
                    android:longClickable="false"
                    android:maxLength="04"
                    android:textAlignment="textStart" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/txtSecurityError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorRed"
                android:visibility="gone"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_marginTop="20sp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_marginEnd="10dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tnl_fName"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/first_name"
                app:hintAnimationEnabled="true"
                app:hintEnabled="true"
                tools:ignore="HardcodedText">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtFName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="start|top"
                    android:inputType="textPersonName"
                    android:longClickable="false"
                    android:maxLength="30"
                    android:textAlignment="textStart" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/txtFNameError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorRed"
                android:visibility="gone"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_marginStart="10dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tnl_sName"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/last_name"
                app:hintAnimationEnabled="true"
                app:hintEnabled="true"
                tools:ignore="HardcodedText">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtSName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="start|top"
                    android:inputType="textPersonName"
                    android:longClickable="false"
                    android:maxLength="30"
                    android:textAlignment="textStart" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/txtLNameError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorRed"
                android:visibility="gone"/>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:text="@string/submit_payment"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/btnReset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:text="Reset"
        android:textStyle="bold"/>

</LinearLayout>